--- a/loader-nukkit/src/main/resources/plugin.yml
+++ b/loader-nukkit/src/main/resources/plugin.yml
@@ -1,4 +1,5 @@
-name: Lactea Loader
+name: Lactea-Loader
 main: de.timolia.lactea.nukkitloader.ModuleLoaderPlugin
 version: "1.0.0"
+api: ["1.0.0"]
 load: POSTWORLD
